--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 	<div class="objetivo-fondo">
-	<h1 class="text-center">Objetivo del Squad: 80%</h1>
+		<h1 class="text-center">Objetivo del Squad: 80%</h1>
+		<p><img src="logus.png" alt="" class="img-responsive center-block"></p>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4 col-md-offset-2">
@@ -40,7 +41,7 @@
 				</p>
 			</div>
 			<div class="col-md-4">
-				<h2 class="center-block" role="alert" id="salida"></h2>				
+				<h2 class="btn btn-danger center-block" role="alert" id="salida"></h2>				
 			</div>	
 		</div>
 	</div>
